--- a/Projects/Smart Mobile/SMS Throttle/Lazarus/MustangpeakTrainCommander/traincommanderunit.lfm
+++ b/Projects/Smart Mobile/SMS Throttle/Lazarus/MustangpeakTrainCommander/traincommanderunit.lfm
@@ -1,7 +1,7 @@
 object FormTrainCommander: TFormTrainCommander
   Left = 418
   Height = 565
-  Top = 161
+  Top = 119
   Width = 684
   Align = alBottom
   Caption = 'Train Commander'
@@ -13,11 +13,11 @@ object FormTrainCommander: TFormTrainCommander
   LCLVersion = '2.0.6.0'
   object PanelDetails: TPanel
     Left = 0
-    Height = 48
+    Height = 96
     Top = 0
     Width = 684
     Align = alTop
-    ClientHeight = 48
+    ClientHeight = 96
     ClientWidth = 684
     TabOrder = 0
     object CheckBoxAutoConnect: TCheckBox
@@ -38,9 +38,9 @@ object FormTrainCommander: TFormTrainCommander
       TabOrder = 1
     end
     object ButtonClear: TButton
-      Left = 424
+      Left = 560
       Height = 23
-      Top = 8
+      Top = 64
       Width = 104
       Caption = 'Clear'
       OnClick = ButtonClearClick
@@ -54,19 +54,71 @@ object FormTrainCommander: TFormTrainCommander
       Caption = 'Local IP'
       TabOrder = 3
     end
+    object LabelNodeIDCaption: TLabel
+      Left = 17
+      Height = 16
+      Top = 47
+      Width = 86
+      AutoSize = False
+      Caption = 'NodeID'
+      ParentColor = False
+    end
+    object LabelAliasIDCaption: TLabel
+      Left = 18
+      Height = 16
+      Top = 71
+      Width = 87
+      AutoSize = False
+      Caption = 'AliasID'
+      ParentColor = False
+    end
+    object LabelNodeID: TLabel
+      Left = 113
+      Height = 16
+      Top = 47
+      Width = 106
+      AutoSize = False
+      ParentColor = False
+    end
+    object LabelAliasID: TLabel
+      Left = 113
+      Height = 16
+      Top = 71
+      Width = 106
+      AutoSize = False
+      ParentColor = False
+    end
+    object Button1: TButton
+      Left = 459
+      Height = 25
+      Top = 21
+      Width = 75
+      Caption = 'Button1'
+      TabOrder = 4
+    end
+    object CheckBoxLogMessages: TCheckBox
+      Left = 440
+      Height = 18
+      Top = 64
+      Width = 108
+      Caption = 'Log Messages'
+      Checked = True
+      State = cbChecked
+      TabOrder = 5
+    end
   end
   object PanelConnections: TPanel
     Left = 0
-    Height = 125
-    Top = 425
+    Height = 102
+    Top = 448
     Width = 684
     Align = alBottom
-    ClientHeight = 125
+    ClientHeight = 102
     ClientWidth = 684
     TabOrder = 1
     object ListviewConnections: TListView
       Left = 1
-      Height = 123
+      Height = 100
       Top = 1
       Width = 682
       Align = alClient
@@ -81,15 +133,15 @@ object FormTrainCommander: TFormTrainCommander
     Cursor = crVSplit
     Left = 0
     Height = 9
-    Top = 416
+    Top = 439
     Width = 684
     Align = alBottom
     ResizeAnchor = akBottom
   end
   object SplitterTrains: TSplitter
     Left = 170
-    Height = 368
-    Top = 48
+    Height = 343
+    Top = 96
     Width = 5
   end
   object StatusBarMain: TStatusBar
@@ -108,37 +160,48 @@ object FormTrainCommander: TFormTrainCommander
   end
   object PanelTrains: TPanel
     Left = 0
-    Height = 368
-    Top = 48
+    Height = 343
+    Top = 96
     Width = 170
     Align = alLeft
     Caption = 'PanelTrains'
-    ClientHeight = 368
+    ClientHeight = 343
     ClientWidth = 170
     TabOrder = 5
     object ListViewTrains: TListView
       Left = 1
-      Height = 326
-      Top = 41
-      Width = 232
-      Align = alLeft
+      Height = 310
+      Top = 32
+      Width = 168
+      Align = alClient
       Columns = <>
       SmallImages = ImageListMain
       TabOrder = 0
     end
     object PanelTrainsHeader: TPanel
       Left = 1
-      Height = 40
+      Height = 31
       Top = 1
       Width = 168
       Align = alTop
+      ClientHeight = 31
+      ClientWidth = 168
       TabOrder = 1
+      object ButtonTrainsClear: TButton
+        Left = 88
+        Height = 23
+        Top = 7
+        Width = 75
+        Caption = 'Clear'
+        OnClick = ButtonTrainsClearClick
+        TabOrder = 0
+      end
     end
   end
   object MemoLog: TMemo
     Left = 175
-    Height = 368
-    Top = 48
+    Height = 343
+    Top = 96
     Width = 509
     Align = alClient
     ScrollBars = ssVertical
@@ -1174,5 +1237,11 @@ object FormTrainCommander: TFormTrainCommander
       4633C8874633C8874633C8874633C8874633C8874633C8874633C8874633C887
       4633C8874633C8874633CC804D0A
     }
+  end
+  object TimerIncomingMessagePump: TTimer
+    Interval = 200
+    OnTimer = TimerIncomingMessagePumpTimer
+    left = 296
+    top = 32
   end
 end
