--- a/Projects/Smart Mobile/SMS Throttle/Lazarus/MustangpeakTrainCommander/traincommanderunit.lfm
+++ b/Projects/Smart Mobile/SMS Throttle/Lazarus/MustangpeakTrainCommander/traincommanderunit.lfm
@@ -88,14 +88,6 @@ object FormTrainCommander: TFormTrainCommander
       AutoSize = False
       ParentColor = False
     end
-    object Button1: TButton
-      Left = 459
-      Height = 25
-      Top = 21
-      Width = 75
-      Caption = 'Button1'
-      TabOrder = 4
-    end
     object CheckBoxLogMessages: TCheckBox
       Left = 440
       Height = 18
@@ -104,6 +96,14 @@ object FormTrainCommander: TFormTrainCommander
       Caption = 'Log Messages'
       Checked = True
       State = cbChecked
+      TabOrder = 4
+    end
+    object CheckBoxUseSyncronize: TCheckBox
+      Left = 384
+      Height = 18
+      Top = 8
+      Width = 202
+      Caption = 'Use Syncronize in the threads'
       TabOrder = 5
     end
   end
