--- a/Projects/Smart Mobile/SMS Throttle/Lazarus/MustangpeakTrainCommander/traincommanderunit.lfm
+++ b/Projects/Smart Mobile/SMS Throttle/Lazarus/MustangpeakTrainCommander/traincommanderunit.lfm
@@ -127,6 +127,15 @@ object FormTrainCommander: TFormTrainCommander
       OnClick = ButtonManualConnectComPortClick
       TabOrder = 7
     end
+    object ButtonActionObjectCount: TButton
+      Left = 255
+      Height = 25
+      Top = 80
+      Width = 171
+      Caption = 'Action Objects = 0'
+      OnClick = ButtonActionObjectCountClick
+      TabOrder = 8
+    end
   end
   object PanelConnections: TPanel
     Left = 0
